--- a/app/src/main/res/layout/activity_appoinment.xml
+++ b/app/src/main/res/layout/activity_appoinment.xml
@@ -1,19 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
     android:background="@drawable/d_background"
-    tools:context="system.faisalshakiba.com.hellodoctor.AppoinmentActivity">
+    android:layout_height="match_parent">
 
     <LinearLayout
         android:layout_width="368dp"
         android:layout_height="495dp"
         android:orientation="vertical"
         android:gravity="center"
-        tools:layout_editor_absoluteY="8dp"
-        tools:layout_editor_absoluteX="8dp">
+       >
 
         <EditText
             android:id="@+id/editText8"
@@ -45,4 +41,4 @@
             android:layout_height="wrap_content"
             android:text="Get Appointment" />
     </LinearLayout>
-</android.support.constraint.ConstraintLayout>
+</RelativeLayout>
