--- a/app/src/main/res/layout/activity_second.xml
+++ b/app/src/main/res/layout/activity_second.xml
@@ -1,47 +1,81 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:padding="20dp"
     android:background="@drawable/d_background"
-    tools:context="system.faisalshakiba.com.hellodoctor.SecondActivity">
+    android:layout_height="match_parent">
 
     <LinearLayout
-        android:layout_width="368dp"
-        android:layout_height="495dp"
+
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:orientation="vertical"
         android:gravity="center"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="8dp">
+      >
 
         <TextView
             android:id="@+id/textView3"
-            android:layout_width="160dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:textColor="@android:color/black"
+            android:textSize="30dp"
+            android:fontFamily="cursive"
             android:gravity="center"
-            android:text="I am a"
+            android:text="I AM A"
             />
 
-        <RadioButton
-            android:id="@+id/radioButton"
-            android:layout_width="160dp"
-            android:layout_height="wrap_content"
-            android:text="Doctor"
-            android:gravity="center"/>
+        <RadioGroup
+            android:layout_marginTop="20dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" >
+            <RadioButton
+                android:id="@+id/s_doctor"
+                android:layout_width="160dp"
+                android:layout_height="wrap_content"
+                android:text="Doctor"
+                android:textSize="30dp"
+                android:fontFamily="cursive"
 
-        <RadioButton
-            android:id="@+id/radioButton2"
-            android:layout_width="160dp"
-            android:layout_height="wrap_content"
-            android:text="Patient"
-            android:gravity="center"/>
+                android:gravity="center"/>
 
-        <Button
-            android:id="@+id/button2"
-            android:layout_width="80dp"
+            <RadioButton
+                android:id="@+id/s_patient"
+                android:layout_width="160dp"
+                android:layout_height="wrap_content"
+                android:text="Patient"
+                android:textSize="30dp"
+                android:fontFamily="cursive"
+                android:gravity="center"/>
+            </RadioGroup>
+
+
+
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Next" />
+            android:layout_marginTop="20dp"
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/s_btn_back"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:textSize="30dp"
+                android:fontFamily="cursive"
+                android:gravity="center"
+                android:text="back" />
+
+            <Button
+                android:id="@+id/s_btn_next2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:fontFamily="cursive"
+                android:gravity="center"
+                android:text="Next"
+                android:textSize="30dp" />
+        </LinearLayout>
 
     </LinearLayout>
-</android.support.constraint.ConstraintLayout>
+</RelativeLayout>
