--- a/app/src/main/res/layout/doctor_registration.xml
+++ b/app/src/main/res/layout/doctor_registration.xml
@@ -93,7 +93,7 @@
                         android:hint="mobile ex: 017xxxxxxxx" />
 
                     <EditText
-                        android:id="@+id/editText12"
+                        android:id="@+id/d_email"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:ems="10"
@@ -101,7 +101,7 @@
                         android:hint="email ex: user@example.com" />
 
                     <EditText
-                        android:id="@+id/editText13"
+                        android:id="@+id/d_fees"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:ems="10"
@@ -115,7 +115,7 @@
                         android:orientation="vertical">
 
                         <TextView
-                            android:id="@+id/textView12"
+                            android:id="@+id/d_location"
                             android:layout_width="match_parent"
                             android:textAlignment="center"
                             android:layout_height="wrap_content"
@@ -137,7 +137,7 @@
                                 android:inputType="textPersonName" />
 
                             <Button
-                                android:id="@+id/button7"
+                                android:id="@+id/d_btn_location"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
 
@@ -151,13 +151,14 @@
                             android:orientation="horizontal">
 
                             <EditText
-                                android:id="@+id/editText15"
+                                android:id="@+id/d_from_time"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_weight="1"
                                 android:ems="10"
                                 android:hint="from"
-                                android:inputType="time" />
+
+                                android:inputType="none" />
 
                             <TextView
                                 android:id="@+id/textView10"
@@ -169,13 +170,14 @@
                                 android:textSize="30dp" />
 
                             <EditText
-                                android:id="@+id/editText14"
+                                android:id="@+id/d_to_time"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_weight="1"
                                 android:ems="10"
+
                                 android:hint="to"
-                                android:inputType="time" />
+                                android:inputType="none" />
                         </LinearLayout>
 
                         <LinearLayout
@@ -184,7 +186,7 @@
                             android:orientation="vertical">
 
                             <EditText
-                                android:id="@+id/editText10"
+                                android:id="@+id/d_date"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:hint="enter date"
@@ -198,16 +200,23 @@
                             android:orientation="vertical">
 
                             <TimePicker
-                                android:id="@+id/timePicker4"
+                                android:id="@+id/d_timepicker"
                                 android:layout_width="match_parent"
                                 android:visibility="gone"
                                 android:layout_height="wrap_content" />
 
                             <DatePicker
-                                android:id="@+id/datePicker"
+                                android:id="@+id/d_datePicker"
                                 android:visibility="gone"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content" />
+
+                            <Button
+                                android:id="@+id/d_btn_add_time"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:visibility="gone"
+                                android:text="ADD SHEDULE" />
 
                         </LinearLayout>
 
@@ -217,14 +226,30 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:minHeight="50dp"
-                        android:orientation="vertical"></LinearLayout>
+                        android:orientation="vertical">
 
-                    <Button
-                        android:id="@+id/button6"
+                    </LinearLayout>
+
+                    <LinearLayout
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:text="NEXT" />
+                        android:layout_height="match_parent"
+                        android:orientation="horizontal">
+                        <Button
+                            android:id="@+id/d_btn_back"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:text="BACK" />
+
+                        <Button
+                            android:id="@+id/d_btn_registration"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:text="REGISTRATION" />
+
+
+                    </LinearLayout>
 
                 </LinearLayout>
             </ScrollView>
