--- a/app/src/main/res/layout/activity_appoinment.xml
+++ b/app/src/main/res/layout/activity_appoinment.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:background="@drawable/d_background"
     android:layout_height="match_parent">
@@ -11,34 +12,109 @@
         android:gravity="center"
        >
 
-        <EditText
-            android:id="@+id/editText8"
-            android:layout_width="302dp"
-            android:layout_height="wrap_content"
-            android:ems="10"
-            android:inputType="textPersonName"
-            android:text="Name" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:orientation="vertical">
 
-        <EditText
-            android:id="@+id/editText7"
-            android:layout_width="302dp"
-            android:layout_height="wrap_content"
-            android:ems="10"
-            android:inputType="textPersonName"
-            android:text="Address" />
+            <ImageView
+                android:id="@+id/img_doctor_details"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                app:srcCompat="@drawable/doctors_appoinment" />
 
-        <EditText
-            android:id="@+id/editText3"
-            android:layout_width="302dp"
-            android:layout_height="wrap_content"
-            android:ems="10"
-            android:inputType="textPersonName"
-            android:text="Visit" />
+            <TextView
+                android:id="@+id/details_doctorName"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:textAlignment="center"
+                android:textColor="@android:color/black"
+                android:textSize="25dp"
+                android:layout_weight="4"
+                android:text="Dr. Name" />
 
-        <Button
-            android:id="@+id/button4"
-            android:layout_width="235dp"
-            android:layout_height="wrap_content"
-            android:text="Get Appointment" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/details_doctorSpecialist"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="specilist" />
+
+            <TextView
+                android:id="@+id/details_doctorLocation"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="location" />
+
+            <TextView
+                android:id="@+id/details_doctorDistance"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+
+                android:text="TextView" />
+
+            <TextView
+                android:id="@+id/textView23"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/history"
+                android:textAlignment="center" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/details_ifnull"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:visibility="gone"
+                    android:text="TextView" />
+
+                <ListView
+                    android:id="@+id/details_listHistory"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent" />
+            </LinearLayout>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/details_map"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:text="map" />
+
+            <Button
+                android:id="@+id/details_call"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:text="CALL" />
+
+            <Button
+                android:id="@+id/details_cancel"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:text="CANCEL APPOINMENT" />
+        </LinearLayout>
+
     </LinearLayout>
 </RelativeLayout>
