--- a/app/src/main/res/layout/patient_dashboard.xml
+++ b/app/src/main/res/layout/patient_dashboard.xml
@@ -2,6 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/pat_dashboard"
     android:padding="20dp"
     android:background="@drawable/d_background">
 
