--- a/app/src/main/res/layout/ambulance_information.xml
+++ b/app/src/main/res/layout/ambulance_information.xml
@@ -9,29 +9,17 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-
-            <TextView
-                android:id="@+id/ambulance"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="     AMBULANCE
-     INFORMATION"
-                android:gravity="center"
-                android:textSize="25dp"/>
-        </LinearLayout>
-        <ScrollView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
             <LinearLayout
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+                <ListView
+                    android:id="@+id/listambulanceview"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent" />
 
             </LinearLayout>
-        </ScrollView>
+
 
     </LinearLayout>
 </RelativeLayout>
