--- a/app/src/main/res/layout/ambulance_listview.xml
+++ b/app/src/main/res/layout/ambulance_listview.xml
@@ -1,54 +1,70 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@drawable/d_background">
+    android:layout_height="wrap_content"
+    >
     <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="150dp"
         android:orientation="vertical">
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
-
-            <TextView
-                android:id="@+id/amb_id"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:visibility="gone"
-                android:text="ambulance id:" />
-
-            <TextView
-                android:id="@+id/amb_hospital"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Hospital Name :" />
-
-            <TextView
-                android:id="@+id/amb_num"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Number:" />
-
-            <TextView
-                android:id="@+id/amb_charge"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Charge :" />
-        </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/table"
             android:orientation="horizontal">
 
-            <Button
-                android:id="@+id/re_map"
-                android:layout_width="125dp"
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:gravity="center"
-                android:text="View Map" />
+
+                android:layout_weight="1"
+                android:orientation="vertical">
+
+                <ImageView
+                    android:id="@+id/imageView4"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:srcCompat="@drawable/amb_button" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:textAlignment="center"
+
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/amb_id"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+
+                    android:text="ambulance id:"
+                    android:visibility="gone" />
+
+                <TextView
+                    android:id="@+id/amb_hospital"
+                    android:layout_width="match_parent"
+                    android:layout_marginTop="50dp"
+                    android:layout_height="wrap_content"
+                    android:text="Hospital Name :" />
+
+                <TextView
+                    android:id="@+id/amb_num"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Number:" />
+
+                <TextView
+                    android:id="@+id/amb_charge"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Charge :" />
+            </LinearLayout>
         </LinearLayout>
+
     </LinearLayout>
 </RelativeLayout>
