--- a/app/src/main/res/layout/doctors_appointment.xml
+++ b/app/src/main/res/layout/doctors_appointment.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:background="@drawable/d_background"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@drawable/d_background">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -11,9 +11,6 @@
 
         <ListView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:id="@+id/listrehabview">
-
-        </ListView>
+            android:layout_height="match_parent" />
     </LinearLayout>
 </RelativeLayout>
