--- a/app/src/main/res/layout/rehab_list.xml
+++ b/app/src/main/res/layout/rehab_list.xml
@@ -1,54 +1,66 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@drawable/d_background">
-<LinearLayout
-    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+   >
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="150dp"
     android:orientation="vertical">
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
-
-        <TextView
-            android:id="@+id/re_id"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:visibility="gone"
-            android:text="Rehab id:" />
-
-        <TextView
-            android:id="@+id/re_name"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Rehab Name :" />
-
-        <TextView
-            android:id="@+id/re_num"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Rehab Number:" />
-
-        <TextView
-            android:id="@+id/re_location"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Location :" />
-    </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="horizontal">
 
-        <Button
-            android:id="@+id/re_map"
-            android:layout_width="125dp"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:text="View Map" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:orientation="vertical">
+
+            <ImageView
+                android:id="@+id/re_image"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                app:srcCompat="@drawable/rehab_button" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/re_id"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Rehab id:"
+                android:visibility="gone" />
+
+            <TextView
+                android:id="@+id/re_name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Rehab Name :"
+                android:layout_marginTop="50dp"/>
+
+            <TextView
+                android:id="@+id/re_num"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Rehab Number:" />
+
+            <TextView
+                android:id="@+id/re_location"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Location :" />
+        </LinearLayout>
     </LinearLayout>
+
 </LinearLayout>
 </RelativeLayout>
