--- a/app/src/main/res/layout/activity_patient_registration.xml
+++ b/app/src/main/res/layout/activity_patient_registration.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="system.faisalshakiba.com.hellodoctor.PatientRegistration">
+    tools:context="system.faisalshakiba.com.hellodoctor.commonactivities.PatientRegistration">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
