--- a/app/src/main/res/layout/activity_doctor.xml
+++ b/app/src/main/res/layout/activity_doctor.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/d_background"
-    tools:context="system.faisalshakiba.com.hellodoctor.DoctorActivity">
+    tools:context="system.faisalshakiba.com.hellodoctor.apitest.DoctorActivity">
 
     <LinearLayout
         android:layout_width="368dp"
