--- a/app/src/main/res/layout/content_patient_nav.xml
+++ b/app/src/main/res/layout/content_patient_nav.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:id="@+id/content_patient_nav"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="system.faisalshakiba.com.hellodoctor.PatientNavActivity"
+    tools:context="system.faisalshakiba.com.hellodoctor.commonactivities.PatientNavActivity"
     tools:showIn="@layout/app_bar_patient_nav">
 
 </android.support.constraint.ConstraintLayout>
