--- a/app/src/main/res/layout/rehab_info.xml
+++ b/app/src/main/res/layout/rehab_info.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
+    android:padding="20dp"
     android:background="@drawable/d_background"
     android:layout_height="match_parent">
 
