--- a/app/src/main/res/menu/patient_nav.xml
+++ b/app/src/main/res/menu/patient_nav.xml
@@ -6,4 +6,10 @@
         android:orderInCategory="100"
         android:title="@string/action_settings"
         app:showAsAction="never" />
+    <item
+        android:id="@+id/action_logout"
+        android:orderInCategory="100"
+        android:title="LOG OUT"
+        android:icon="@drawable/log_outpng"
+        app:showAsAction="always" />
 </menu>
