--- a/app/src/main/res/layout/doctor_registration.xml
+++ b/app/src/main/res/layout/doctor_registration.xml
@@ -51,6 +51,7 @@
                             android:id="@+id/button5"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:background="@drawable/ok_button"
                             android:layout_weight="3"
                             android:layout_marginTop="80dp"
                             android:text="UPLOAD" />
