--- a/app/src/main/res/layout/registration_selection.xml
+++ b/app/src/main/res/layout/registration_selection.xml
@@ -58,6 +58,7 @@
                 android:id="@+id/r_btn_next"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:background="@drawable/ok_button"
                 android:layout_weight="1"
                 android:text="NEXT" />
 
