--- a/app/src/main/res/layout/services.xml
+++ b/app/src/main/res/layout/services.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/layout_service"
-   android:background="@drawable/table"
+   android:background="@drawable/d_background"
     >
 
     <LinearLayout
