--- a/app/src/main/res/layout/doctor_registration.xml
+++ b/app/src/main/res/layout/doctor_registration.xml
@@ -116,7 +116,7 @@
                         android:orientation="vertical">
 
                         <TextView
-                            android:id="@+id/d_location"
+                            android:id="@+id/addtimetextview"
                             android:layout_width="match_parent"
                             android:textAlignment="center"
                             android:layout_height="wrap_content"
@@ -129,7 +129,7 @@
                             android:orientation="horizontal">
 
                             <EditText
-                                android:id="@+id/editText17"
+                                android:id="@+id/d_location"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_weight="1"
@@ -158,8 +158,8 @@
                                 android:layout_weight="1"
                                 android:ems="10"
                                 android:hint="from"
-
-                                android:inputType="none" />
+                                android:editable="false"
+                               />
 
                             <TextView
                                 android:id="@+id/textView10"
@@ -176,7 +176,7 @@
                                 android:layout_height="wrap_content"
                                 android:layout_weight="1"
                                 android:ems="10"
-
+                                android:editable="false"
                                 android:hint="to"
                                 android:inputType="none" />
                         </LinearLayout>
