--- a/app/src/main/res/layout/mental_health.xml
+++ b/app/src/main/res/layout/mental_health.xml
@@ -37,6 +37,13 @@
                 android:id="@+id/mental_listview"
                 android:layout_weight="1" />
 
+            <Button
+                android:id="@+id/mental_back"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="right"
+                android:text="BACK" />
+
         </LinearLayout>
 
 
