--- a/app/src/main/res/layout/rehab_info.xml
+++ b/app/src/main/res/layout/rehab_info.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-
+    android:id="@+id/rehab_info"
     android:background="@drawable/table"
     android:layout_height="match_parent">
 
@@ -14,8 +14,15 @@
         <ListView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_weight="1"
             android:id="@+id/listrehabview">
 
         </ListView>
+        <Button
+            android:id="@+id/rehab_back"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="right"
+            android:text="BACK" />
     </LinearLayout>
 </RelativeLayout>
